<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="sdk_info">SDK Sample</string>
    <string name="basic_scene">Basic scene</string>
    <string name="navigation">Navigation</string>
    <string name="basic_sport">Basic Motion</string>
    <string name="visual_ability">Visual ability</string>
    <string name="speech_ability">Speech ability</string>
    <string name="exit">Exit</string>

    <string name="start_lead_text">Start navigation</string>
    <string name="stop_lead_text">End navigation</string>
    <string name="lead_text">Lead</string>
    <string name="asr_tts">ASR</string>
    <string name="click_to_trigger">Trigger跳转</string>
    <string name="charge_text">Charge</string>
    <string name="lead_hint_point">Reception point</string>
    <string name="lead_tips_text">Notice:Before Lead,Make sure the location exist</string>
    <string name="back_text">Back</string>
    <string name="clear_screen">Clear</string>
    <string name="recovery_screen">RCVY</string>
    <string name="output_result">Result:</string>
    <string name="speech_hint_text">Play text/Query text</string>

    <string name="speech_play">Play</string>
    <string name="speech_stop">Stop</string>
    <string name="speech_query">Query</string>
    <string name="sport_forward">Forward</string>
    <string name="sport_back">Back</string>
    <string name="sport_turn_left">Left</string>
    <string name="sport_turn_right">Right</string>
    <string name="sport_turn_up">Up</string>
    <string name="sport_turn_down">Down</string>
    <string name="sport_stop">Stop</string>
    <string name="sport_head">Head</string>
    <string name="sport_body">Body</string>

    <string name="vision_track_face">Start Trace Face</string>
    <string name="vision_stop_track_face">Stop Trace Face</string>
    <string name="vision_un_register">Unregister</string>
    <string name="vision_warning">Click button , than the screen will tracking your face. </string>
    <string name="vision_warning2">No api to delete person at the moment</string>

    <string name="person_appear">Start Person Appear</string>
    <string name="stop_person_appear">Stop Person Appear</string>
    <string name="person_appear_warning">Click button , than the screen will enable personnel detection. </string>

    <string name="location_reception">Is in reception point?</string>
    <string name="location_init_point">Init Position</string>
    <string name="location_is_estimate">Is estimate</string>
    <string name="location_set_reception">Set reception point</string>
    <string name="location_get_point">Get Point</string>
    <string name="location_remove_point">Del Point</string>
    <string name="getname">getname</string>

    <string name="navigation_stop">Stop</string>
    <string name="navigation_resume_direction">Resume Direction</string>


    <string name="charge_disable">Disable Auto-Charge</string>
    <string name="charge_enable">Enable Auto-Charge</string>
    <string name="charge_auto_start">Start Charge</string>
    <string name="charge_auto_stop">Stop Charge</string>
    <string name="charge_stop_leave">Stop Leaving Charge Dock</string>

    <string name="trigger_to_home">Trigger To home</string>
    <string name="trigger_to_wakeUp">Trigger To wakeUp</string>
    <string name="trigger_to_queryLocation">Trigger To queryLocation</string>
    <string name="trigger_to_weather">Trigger To weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="positioning_spot">Positioning Point</string>
    <string name="charging_point">Charging Point</string>
    <string name="charging_pole">Charging Pole</string>
    <string name="get_place_fail">R.string.get_place_fail</string>
    <string name="stand_by_spot">Stand-by Point</string>
    <string name="reception_point">Reception Point</string>
    <string name="do_not_move_robot">Please don\'t move the robot</string>
    <string name="starting_progress">Creating Map, Please Wait…</string>
    <string name="go_navigation">Go Navigation?</string>
    <string name="sure_go_navigation">Are you sure to navigation %s?</string>
    <string name="cancel_txt">Cancel</string>
    <string name="confirm_txt">Confirm</string>
    <string name="forbid_line_explain">\"No-go line has been added\" or \"No need to add\". Please tap \"Save\".</string>

    <string name="face_trace">FACE TRACE</string>

    <string name="faraway_detect">Faraway Detect Face</string>
    <string name="robot_info">ROBOT INFO</string>
    <string name="get_robot_sn">GET ROBOT SN</string>
    <string name="set_angle_center_range">SET ANGLE CENTER RANGE(359,120)</string>
    <string name="set_recognize_mode">SET RECOGNIZE MODE</string>

</resources>
