<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="560dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sport_scene"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/basic_sport"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/vision_scene"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/visual_ability"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/navigation_scene"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/navigation"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/charge_scene"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/charge_text"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lead_scene"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/lead_text"
                android:textColor="#FFFFFF"
                android:visibility="gone" />

            <Button
                android:id="@+id/speech_scene"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/speech_ability"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/asr_tts"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/asr_tts"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/click_to_trigger"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/click_to_trigger"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/face_trace"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/face_trace"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/faraway_face_check"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/faraway_detect"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/robot_info"
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/robot_info"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

    <Button
            android:layout_gravity="right|bottom"
            android:id="@+id/exit"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorExit"
            android:text="@string/exit"
            android:textColor="#FFFFFF" />
</FrameLayout>
