<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/person_appear_btn"
            style="@style/TextStyle"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:text="@string/person_appear" />

        <Button
            android:id="@+id/stop_person_appear_btn"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:text="@string/stop_person_appear"
            android:visibility="gone" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_appear_warning"
        />
</LinearLayout>