<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.example.myfirstapp.view.BackView
            android:id="@+id/bv_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/person_appear_btn"
                style="@style/TextStyle"
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:text="@string/person_appear" />

            <Button
                android:id="@+id/stop_person_appear_btn"
                style="@style/TextStyle"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:text="@string/stop_person_appear"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_appear_warning" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>